20210403:
  * [gfursin] fixed TFLite packages 1.15 (eigen library).
     https://github.com/ctuning/ck/issues/138
     https://github.com/ctuning/ck/issues/139

* 2020.09.04 - [Fursin] moved module:mlbox to ctuning/ck-mlbox repo

* 2020.09.03 - [Fursin] added module:mlbox to abstract MLBox

* 2018.12.15 - [Fursin] fixed compilation of SyLT for Android

* 2018.11.27 - [Fursin] added soft,package and program for FAI-PEP
             - [Fursin] added basic workflow for MLPerf SyLT
             - [Fursin] added soft and package for MLModelScope
